创建third文件，上次提交为 a6b87f502cc3

--- a/history
+++ b/history
@@ -6,3 +6,6 @@ Initial commit (0f00422e45de155c265bae1)
 
 第二次提交
 创建second文件，上次提交为 265e8ccbb6e45694 (373c8d59c27bff322)
+
+第三次提交
+创建提交history文件，上一次为 373c8d59c27bf (a6b87f502cc34532)
